Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <h4 class="dubious">That hog, upon whom I glower dubiously</h4>
     <div class="container dubious">
       
-        <img class="large" src="./images/the_prosciutto_concern.jpg">
+        <img class="big" src="./images/the_prosciutto_concern.jpg">
         
     </div>
 
