--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
      <div class="column">
         <img class="large" src="./images/the_prosciutto_concern.jpg">
       </div>
+    <div class="column"></div>
+    <div class="column"></div>
+      
       
     </div>
 
